# 2026-workshop-week10-apis

./: README.md  fetch_parties.py  parliament_streamgraph.html  pyproject.toml
parties_data/: 1970-01-01.json  1970-02-01.json  1970-03-01.json  1970-04-01.json  1970-05-01.json  1970-06-01.json  1970-07-01.json  1970-08-01.json  1970-09-01.json  1970-10-01.json  1970-11-01.json  1970-12-01.json  1971-01-01.json  1971-02-01.json  1971-03-01.json  1971-04-01.json  1971-05-01.json  1971-06-01.json  1971-07-01.json  1971-08-01.json  1971-09-01.json  1971-10-01.json  1971-11-01.json  1971-12-01.json  1972-01-01.json  1972-02-01.json  1972-03-01.json  1972-04-01.json  1972-05-01.json  1972-06-01.json  1972-07-01.json  1972-08-01.json  1972-09-01.json  1972-10-01.json  1972-11-01.json  1972-12-01.json  1973-01-01.json  1973-02-01.json  1973-03-01.json  1973-04-01.json  (+630 more)
